Added: the method getUpdatedHymns - /hymns/updated/{afterDateTime}
